--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/FuckTheBanks/RevenuQuebec#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.166",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {
